--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@
 # Bot Token [Required]
 BOT_TOKEN=
 
+# Animation in those variables you can add file name of the pfp and the banner [Required]
+PFP=
+BANNER=
+
 # Mongo Database Connection String [Required]
 MONGO_CONNECTION=
 
