--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 BOT_TOKEN=
 
 # Animation in those variables you can add file name of the pfp and the banner [Required]
-PFP=
-BANNER=
+PFP=pfp.gif
+BANNER=banner.gif
 
 # Mongo Database Connection String [Required]
 MONGO_CONNECTION=
