--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "string-progressbar": "^1.0.4",
     "table": "^6.8.1",
     "timestamp-to-date": "^1.1.0",
+    "mineflayer": "^4.20.1",
     "twemoji-parser": "^14.0.0"
   },
   "optionalDependencies": {
