--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "table": "^6.8.1",
     "timestamp-to-date": "^1.1.0",
     "mineflayer": "^4.20.1",
+    "mineflayer-pathfinder": "^2.4.5",
     "twemoji-parser": "^14.0.0"
   },
   "optionalDependencies": {
