--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "timestamp-to-date": "^1.1.0",
     "mineflayer": "^4.20.1",
     "mineflayer-pathfinder": "^2.4.5",
+    "log4js": "^6.9.1",
     "twemoji-parser": "^14.0.0"
   },
   "optionalDependencies": {
